# storefront

./: .dockerignore  .eslintrc.js  .gitignore  .pylintrc  README.md  alembic.ini  api_forms.py  auth.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  main.py  mypy.ini  nuxt.config.js  package-lock.json  package.json  postman.py  pyproject.toml
.github/workflows/: pythonapp.yml
alembic/versions/: 2020-02-07_d4e897cc4f57_create_products_table.py  2020-02-07_e278c1e86cf0_create_groups_table.py  2020-02-07_e365a7ec9717_create_invoice_table.py  2020-02-07_e365a7ec9717_create_purchases_table.py
components/: Account.vue  BookCard.vue  Bookshelf.vue  BookshelfFilter.vue  BuyButton.vue  Cart.vue  CartButton.vue  ChangePasswordForm.vue  Downloader.vue  IconButton.vue  InCartButton.vue  Msg.vue  NavBar.vue  NavMenu.vue  SignInForm.vue  SignUpForm.vue  VarietySwitcher.vue
components/nav/: AccountButton.vue  AccountNavMenu.vue  CartButton.vue  CartNavMenu.vue  NavBar.vue  NavMenu.vue
db/: __init__.py  db.py  models.py
forms/: auth.py  products.py  user.py
layouts/: default.vue  plain.vue  wide.vue
lib/: book.ts  cart.ts  download.ts  forms.ts  msg.ts  user.ts
logic/: users.py
mappers/: products.py  user.py
pages/: about.vue  cart.vue  index.vue  reader.vue
plugins/: axios.ts  icons.ts  ui-kit.ts
routes/: download.py  me.py  payment.py  products.py
store/: cart.ts  msg.ts  user.ts
templates/: change_password.html.jinja2  change_password.plain.jinja2
tests/: test_products.py
utils/: store-accessor.ts
(+107 files in other folders)
